--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         jcenter()
     }
     dependencies {
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.5.3"
 
         classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.5.3")
     }
